Fix images wrap and lower sign-up margin

--- a/style.css
+++ b/style.css
@@ -110,8 +110,7 @@ ul {
 }
 
 .section2 {
-    display: block;
-    padding: 40px 250px;
+    margin-top: 28px;
 }
 
 .section3 {
@@ -149,6 +148,7 @@ text-align: center;
 
 .images-text-bar {
     display: flex;
+    flex-wrap: wrap;
 }
 
 h2 {
@@ -165,12 +165,10 @@ h2 {
 .thor {
     text-align: end;
     font-weight: 600;
+    font-size: 24px;
 }
 
-.itstime {
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    align-items: start;
-    flex-wrap: wrap;
+#callmsg {
+    margin-top: 2px;
+    margin-bottom: 0;
 }
